# concurrent

./: .gitignore  .todo  Cargo.toml  LICENSE  README.md  example.par  format.fj  justfile  output.fk  simple.txt  test.fk  test.par  test_complex.fk  test_goto_end_inline.txt  test_multi_fork.fk  test_output.fk  test_output.par  test_terminal.graph
.zed/: debug.json
examples/: 01_sequence.graph  03_parallel.par  04_nested_seq.graph  05_nested_par.par  06_complex.fk  complex.graph  dependencies.graph  error_circular.graph  error_missing.graph  parallel.graph  parallel_v2.graph  sequence.graph  terminal.graph
grammar/: fk.pest  lang.pest  par.pest
output/: bad.fk  complex.fk  complex.par  complex_from_par.fk  parallel.diff  parallel.fk  parallel_experiment.fk  parallel_v2.fk  parallel_v2.graph  terminal.diff  terminal.fk  terminal.graph  tm.graph
src/: cli.rs  error.rs  lib.rs  main.rs  test.graph  validate.rs  validator.rs
src/graph/: cfg.rs  fk.rs  ir.rs  mod.rs  par.rs
src/parser/: grammar.rs  items.rs  mod.rs
src/parser/fk/: cfg.rs  grammar.rs  items.rs  mod.rs
src/parser/ir/: grammar.rs  mod.rs
src/parser/par/: grammar.rs  items.rs  mod.rs
src/render/: mod.rs
src/rendering/: mod.rs  pdf.rs
