[package]
name = "concurrent"
version = "0.1.0"
edition = "2024"

[lib]
name = "concurrent"
path = "src/lib.rs"

[[bin]]
name = "concurrent"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.56", features = ["cargo"] }
layout-rs = "0.1.3"
pest = { version = "2.8.3", features = ["miette-error"] }
pest_derive = "2.8.3"
petgraph = "0.8.3"
svg2pdf = "0.13.0"
thiserror = "2.0.17"
